FTF E2E prototype iterations

--- a/app/views/ftf/agreement/v2-0/agreement-accepted.html
+++ b/app/views/ftf/agreement/v2-0/agreement-accepted.html
@@ -38,7 +38,17 @@
           
         {% include "../../_includes/body-content_agreement-accepted-main-block.html" %}
 
-          <br>
+
+          {% include "../../_includes/details-block_agreement-questions-contact.html" %}
+
+          <br><br>
+
+            
+            <span class="content-section">
+            <h2 class="govuk-heading-m">Withdrawing your agreement</h2>
+            <p class="govuk-body">If you no longer want the grant funding, you can <a href="">withdraw your application</a> before you make a claim.</p>
+            </span>
+
         <p class="govuk-body"><a href="../../activity-list/v3-0/index?status=04&eoi=03b&apply=03b&agree=03&claim-01=02a&claim-02=01&claim-03=01">Go back to task list</a></p>
 
         
