--- a/app/views/ftf/agreement/v2-0/index2.html
+++ b/app/views/ftf/agreement/v2-0/index2.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
+  <title>Water Management Grant – Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -33,7 +33,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
 
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.</span>
+<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant – Round 3 (Reference: WM-VMA-1234) has been approved.</span>
 
   <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
     <tr>
@@ -135,7 +135,7 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Water Management Grant - Round 3<br>
+          <strong>Grant:</strong> Water Management Grant – Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
           <br>      
@@ -143,7 +143,7 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
                           
-              Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.<br>
+              Your application for the Water Management Grant – Round 3 (Reference: WM-VMA-1234) has been approved.<br>
             </p>
 
 						
