--- a/app/views/ftf/application/v3-0/confirmation.html
+++ b/app/views/ftf/application/v3-0/confirmation.html
@@ -31,7 +31,7 @@
          
           
           <div class="govuk-panel__body">
-            Your reference number<br><strong>HDJ2123F</strong>
+            Your reference number<br><strong>WM-VMW-1234</strong>
           </div>
         </div>
         
@@ -89,29 +89,34 @@
              </ul>
           </p>
 
+          <br>
+
+          {% include "../../_includes/details-block_application-questions-contact.html" %}
+
+          <br><br>
 
           <h2 class="govuk-heading-m">Withdrawing your application</h2>
 
 
-          <p class="govuk-body">If you no longer want the grand funding, you can <a href="/_common/not-testing.html">withdraw your application</a> before you make a claim.</p>
+          <p class="govuk-body">If you no longer want the grand funding, you can <a href="/_common/not-testing.html">withdraw your application</a>.</p>
 
-          <br>
-
-
+          <br><br>
 
 
 
 
 
-        {% include "../../_includes/details-block_application-questions-contact.html" %}
 
-       <br><br>
+
+
+
+
 
 
 
 
        <p class="govuk-body">
-        <a href="../../activity-list/v3-0/index?status=02c&eoi=03b&apply=03a&agree=01&claim-01=01&claim-02=0&claim-03=0">Go back to the task list</a></p>
+        <a href="../../activity-list/v3-0/index?status=02c&eoi=03b&apply=03a&agree=01&claim-01=01&claim-02=0&claim-03=0">Go back to task list</a></p>
        </p>
 
        
