--- a/app/views/ftf/application/v3-0/download2.html
+++ b/app/views/ftf/application/v3-0/download2.html
@@ -24,7 +24,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
+    <span class="govuk-caption-xl">Apply</span>
       <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Download application forms</h1>
    
 <br><br>
@@ -84,7 +84,7 @@
 
       <h3 class="govuk-heading-m">Evidence you need to apply</h3>
          <p class="govuk-body">You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual (opens in a new tab) </a>.</p>
-         <p class="govuk-body">Evidence will include:<br>
+         <p class="govuk-body">Evidence could include:<br>
           <ul class="govuk-list govuk-list--bullet">
             <li>financial accounts</li>
             <li>linked businesses and their accounts</li>
