--- a/app/views/ftf/application/v3-0/financial/financial1a.html
+++ b/app/views/ftf/application/v3-0/financial/financial1a.html
@@ -25,9 +25,9 @@
   <div class="govuk-grid-column-two-thirds">
 
 
-    <span class="govuk-caption-xl">Upload evidence</span>
+    <span class="govuk-caption-xl">Apply</span>
     <h1 class="govuk-heading-xl">Financial accounts</h1>
-    <h2 class="govuk-body" style="margin-top: -20px;">Upload full financial accounts to cover the last 3 years.</h2>
+    <p class="govuk-body-l" style="margin-top: -20px;">Upload full financial accounts to cover the last 3 years.</p>
   
 
 
