--- a/app/views/ftf/application/v3-0/index.html
+++ b/app/views/ftf/application/v3-0/index.html
@@ -33,7 +33,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
 
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.</span>
+<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant – Round 3 (Reference: WM-VMA-1234) has been approved.</span>
 
   <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
     <tr>
@@ -137,7 +137,7 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Water Management Grant - Round 3<br>
+          <strong>Grant:</strong> Water Management Grant – Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
           <br>      
@@ -172,7 +172,7 @@
 
             Before you fill in the full application, you need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.<br><br>
 
-            Evidence will include:<br><br>
+            Evidence could include:<br><br>
 
               <li>financial accounts</li>
               <li>linked businesses and their accounts</li>
