--- a/app/views/ftf/application/v3-0/linked/list.html
+++ b/app/views/ftf/application/v3-0/linked/list.html
@@ -31,7 +31,7 @@
       <h1 class="govuk-heading-xl">
         Linked business accounts
       </h1>
-      <h2 class="govuk-body" style="margin-top: -20px;">Add accounts for each linked business.</h2>
+      <p class="govuk-body-l" style="margin-top: -20px;">Add accounts for each linked business.</p>
   
       <br>
 
