--- a/app/views/ftf/application/v3-0/project/project1.html
+++ b/app/views/ftf/application/v3-0/project/project1.html
@@ -28,7 +28,7 @@
     <span class="govuk-caption-xl">Upload evidence</span>
     <h1 class="govuk-heading-xl">Project funding</h1>
   
-    <p class="govuk-body" style="margin-top: -20px;">You need to provide evidence you can pay for the rest of the project. </p><br>
+    <p class="govuk-body-l" style="margin-top: -20px;">Upload evidence you can pay for the rest of the project.</p><br>
 
     <p class="govuk-body" style="margin-top: -20px;">This might be:<br>
       <ul class="govuk-list govuk-list--bullet">
