--- a/app/views/ftf/application/v3-0/quotes/quotes2.html
+++ b/app/views/ftf/application/v3-0/quotes/quotes2.html
@@ -30,7 +30,7 @@
   
 
 
-    <p class="govuk-body" style="margin-top: -20px;">Add any quotes, tenders or catalogue listings from suppliers.</p>
+    <p class="govuk-bod-l" style="margin-top: -20px;">Add any quotes, tenders or catalogue listings from suppliers.</p>
 <br>
     <p class="govuk-body">If tenders have been obtained, you should also upload a detailed specification of works by a qualified external consultant, for example a quantity surveyor.</p>
 
