--- a/app/views/ftf/application/v3-0/submit.html
+++ b/app/views/ftf/application/v3-0/submit.html
@@ -24,14 +24,25 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
+    <span class="govuk-caption-xl">Apply</span>
     <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Submit application</h1>
-    <span class="govuk-body">Read and agree to submit your application.</span>
+    <span class="govuk-body-l">Read and agree to submit your application.</span>
 
 <br><br><br>
 
 
-    <h2 class="govuk-heading-l">Declaration</h2>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>I confirm all information provided is true and I take full responsibility for it.</li>
+      <li>I understand I will need to supply additional information if my application is successful.</li>
+      <li>I will notify the Rural Payments Agency promptly of any changes.</li>
+      <li>I understand my information may be used by public bodies or their agents in connection with the Farming Transformation Fund.</li>
+      <li>I understand and comply with all application conditions and guidance.</li>
+      <li>I understand that my business may be inspected and will provide all necessary co-operation.</li>
+      <li>If successful, I will adhere to grant funding terms and conditions, and understand that grant payment depends on that compliance.</li>
+    </ul>
+
+
+    <!-- <h2 class="govuk-heading-l">Declaration</h2>
 
     <p class="govuk-body">By submitting and/or agreeing to the submission of this application form I agree to the following declaration:<br>
 
@@ -47,7 +58,7 @@
           <li>I confirm that I have disclosed details of all business interests held by any members of this business.</li>
           <li>I understand that if my application is successful, I will be required to enter into a grant funding agreement, and payment of any grant funding will be conditional on compliance with the terms of that agreement.</li>
           <li>I understand that use of an agent will not limit my responsibility to comply with the terms of that agreement, nor does it affect my personal responsibility to make sure the information provided in this application is accurate. I authorise the person(s) list at section 2 in the application form to liaise with RPA regarding this application and to be copied in on any correspondence relating to this application.</li>
-        </ul>
+        </ul> -->
 
 
 
