--- a/app/views/ftf/application/v3-0/summary.html
+++ b/app/views/ftf/application/v3-0/summary.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-column-two-thirds">
 
 
-    <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
+    <span class="govuk-caption-xl">Apply</span>
 
      
     {% if (data['progress'] == "submitted") %}
@@ -35,8 +35,8 @@
         
     
     {% if (data['progress'] == "submitted") %}
-    <span class="govuk-body">Application form, appendix and evidence submitted as part of your application.</span>{% else %}
-    <span class="govuk-body">Review you have uploaded your application form, appendix and evidence.</span>{% endif %}
+    <p class="govuk-body-l">Application form, appendix and evidence submitted as part of your application.</p>{% else %}
+    <p class="govuk-body-l">Review you have uploaded your application form, appendix and evidence.</p>{% endif %}
 
 <br><br><br>
 
