--- a/app/views/ftf/application/v3-0/vat/vat1.html
+++ b/app/views/ftf/application/v3-0/vat/vat1.html
@@ -33,7 +33,7 @@
     <p class="govuk-body" style="margin-top: -20px;">You must provide a letter from an independent qualified accountant or HMRC that:<br>
       <ul class="govuk-list govuk-list--bullet">
         <li>shows your VAT status</li>
-        <li>confirms that your business cannot recover the VAT (because you are not VAT registered or are making exempt supplies)</li>
+        <li>confirms that your business cannot recover the VAT (because you are not VAT registered or are making <a href="https://www.gov.uk/guidance/vat-exemption-and-partial-exemption" target="_blank">exempt supplies (opens in new tab)</a>&nbsp;)</li>
       </ul>
     </p>
 
