--- a/app/views/ftf/claim/v3-0/check.html
+++ b/app/views/ftf/claim/v3-0/check.html
@@ -24,13 +24,13 @@
   <div class="govuk-grid-column-two-thirds">
 
 
-    <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
+    <span class="govuk-caption-xl">Submit first claim</span>
     {% if (data['progress'] == "submitted") %}
     <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Your claim files</h1>
-    <span class="govuk-body">Files you submitted for this claim.</span>
+    <p class="govuk-body-l">Files you submitted for this claim.</p>
     {% else %}
     <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check your claim files</h1>
-    <span class="govuk-body">Review your files before submitting your claim.</span>
+    <p class="govuk-body-l">Review your files before submitting your claim.</p>
     {% endif %}
 
 <br><br><br>
