--- a/app/views/ftf/claim/v3-0/confirmation.html
+++ b/app/views/ftf/claim/v3-0/confirmation.html
@@ -29,7 +29,7 @@
               First claim submitted
             </h1>
           <div class="govuk-panel__body">
-            Your reference number<br><strong>HDJ2123F</strong>
+            Your reference number<br><strong>WM-VMA-1234</strong>
           </div>
         </div>
         
