--- a/app/views/ftf/claim/v3-0/download.html
+++ b/app/views/ftf/claim/v3-0/download.html
@@ -39,7 +39,7 @@
 <h3 class="govuk-heading-m">What you need to do</h3>
     <span class="govuk-body">Download and complete the claim form.</span>
      <br><br>
-    <p class="govuk-body">When you are ready, you can upload your claim form and evidence and submit your claim.</p>
+    <p class="govuk-body">When you are ready to submit your claim, <a href="/_common/not-testing.html">upload your claim form and evidence</a>.</p>
   
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
@@ -84,12 +84,12 @@
         <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
           <ul class="govuk-list govuk-list--bullet">
             <li>has been purchased (for example, invoices)</li>
-            <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
+            <li>has been paid for in full (for example, receipts and bank statements – you can cross out other transactions)</li>
             <li>is in place and operational (for example, photos, videos)</li>
           </ul>
         </p>
     
-        <p><a class="govuk-link" href="/_common/not-testing.html" target="_blank">Check guidance on how to make a claim (opens in a new tab)</a></p>
+        <p><a class="govuk-link" href="/_common/not-testing.html" target="_blank">Read more about how to make a claim (opens in a new tab)</a></p>
 
 
 <br><br>
