--- a/app/views/ftf/claim/v3-0/index.html
+++ b/app/views/ftf/claim/v3-0/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
+  <title>Water Management Grant – Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -33,7 +33,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
 
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.</span>
+<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant – Round 3 (Reference: WM-VMA-1234) has been approved.</span>
 
   <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
     <tr>
@@ -137,7 +137,7 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Water Management Grant - Round 3<br>
+          <strong>Grant:</strong> Water Management Grant – Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
           <br>      
@@ -166,7 +166,7 @@
             You need evidence that each item you are claiming for:<br><br>
 
               <li>has been purchased (for example, invoices)</li>
-              <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
+              <li>has been paid for in full (for example, receipts and bank statements – you can cross out other transactions)</li>
               <li>is in place and operational (for example, photos, videos)</li>
 
               <br>
@@ -175,7 +175,7 @@
                         
               When you are ready to submit your claim, <a href="/_common/not-testing.html">upload your claim form and evidence</a>.<br><br>
 
-            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of this form.<br>
+            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of the claim form.<br>
 
 
 
