--- a/app/views/ftf/claim/v3-0/upload1.html
+++ b/app/views/ftf/claim/v3-0/upload1.html
@@ -25,7 +25,7 @@
   <div class="govuk-grid-column-two-thirds">
 
 
-    <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
+    <span class="govuk-caption-xl">Submit first claim</span>
     <h1 class="govuk-heading-xl">Upload claim form and evidence</h1>
 
     <h2 class="govuk-heading-l">1. Claim form</h2>
@@ -36,7 +36,7 @@
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive"></span>
-        Do not upload handwritten and scanned copies or PDFs of this form.
+        Do not upload scanned copies or PDFs of the form.
       </strong>
     </div>
     <div class="govuk-form-group">
@@ -76,7 +76,7 @@
     <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
       <ul class="govuk-list govuk-list--bullet">
         <li>has been purchased (for example, invoices)</li>
-        <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
+        <li>has been paid for in full (for example, receipts and bank statements – you can cross out other transactions)</li>
         <li>is in place and operational (for example, photos, videos)</li>
       </ul>
     </p>
