--- a/app/views/ftf/eoi/v2-0/check.html
+++ b/app/views/ftf/eoi/v2-0/check.html
@@ -23,16 +23,10 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<h2 class="govuk-heading-l">Check your details</h2>
+    <span class="govuk-caption-l">Expression of interest</span>
+<h1 class="govuk-heading-l">Check your details</h1>
     
 <br>
-
-
-
-
-
-
-
 
 
 <dl class="govuk-summary-list">
@@ -68,15 +62,15 @@
 
 
 
+
 <br><br>
-<p class="govuk-body">Changes to the following sections will update your Rural Payments Service account.</p>
-<br>
+
 
 <dl class="govuk-summary-list">
 
   <div style="display: flex; justify-content: space-between; align-items: center;">
-    <h2 class="govuk-heading-m" style="margin: 0;">Business details</h2>
-    <a href="#" style="margin-left: auto;">Change (opens in a new tab)</a>
+    <h2 class="govuk-heading-m" style="margin: 0;">Employees and turnover details</h2>
+    <a href="/_common/not-testing.html" style="margin-left: auto;">Change</a>
   </div>
   
 </dl>
@@ -84,44 +78,31 @@
 <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Business name
+              Number of employees
             </dt>
             <dd class="govuk-summary-list__value">
-              Imaginary Farm Ltd 
+              5 
             </dd>
 
           </div>
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Business address
+              Business turnover
             </dt>
             <dd class="govuk-summary-list__value">
-              Address line 1<br>
-              Address line 2<br>
-              Surrey
+              £50,000
             </dd>
  
           </div>
-
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Business postcode
-            </dt>
-            <dd class="govuk-summary-list__value">
-              GU22 9HG
-            </dd>
-
-          </div>
-
 </dl>
 
 
 
 
 <br><br>
-
-
+<p class="govuk-body">Changes to the following sections will update your Rural Payments Service account.</p>
+<br>
 
 
 
@@ -129,7 +110,7 @@
 
   <div style="display: flex; justify-content: space-between; align-items: center;">
     <h2 class="govuk-heading-m" style="margin: 0;">Applicant details</h2>
-    <a href="#" style="margin-left: auto;">Change (opens in a new tab)</a>
+    <a href="#" style="margin-left: auto;">Change</a>
   </div>
   
 </dl>
@@ -187,7 +168,7 @@
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Business phone number
+              Landline phone number
             </dt>
             <dd class="govuk-summary-list__value">
               08001234567
@@ -195,6 +176,69 @@
 
           </div>
 </dl>
+
+
+<br><br>
+
+
+
+<dl class="govuk-summary-list">
+
+  <div style="display: flex; justify-content: space-between; align-items: center;">
+    <h2 class="govuk-heading-m" style="margin: 0;">Business details</h2>
+    <a href="#" style="margin-left: auto;">Change</a>
+  </div>
+  
+</dl>
+
+
+
+<dl class="govuk-summary-list">
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Business name
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Imaginary Farm Ltd 
+            </dd>
+
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Single Business Identifier (SBI)
+            </dt>
+            <dd class="govuk-summary-list__value">
+              987654321 
+            </dd>
+
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Business address
+            </dt>
+            <dd class="govuk-summary-list__value">
+              Address line 1<br>
+              Address line 2<br>
+              Surrey
+            </dd>
+ 
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Business postcode
+            </dt>
+            <dd class="govuk-summary-list__value">
+              GU22 9HG
+            </dd>
+
+          </div>
+
+</dl>
+
+
 
 
 
