--- a/app/views/ftf/eoi/v2-0/p-details.html
+++ b/app/views/ftf/eoi/v2-0/p-details.html
@@ -28,7 +28,9 @@
     <div class="govuk-grid-row">
       
       <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-l">Project details</h2>
+
+        <span class="govuk-caption-l">Expression of interest</span>
+        <h1 class="govuk-heading-l">Project details</h1>
       
       
 
