--- a/app/views/ftf/eoi/v2-0/submit.html
+++ b/app/views/ftf/eoi/v2-0/submit.html
@@ -24,8 +24,8 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <!--<span class="govuk-caption-xl">Claim for a Water Management Grant</span> -->
-    <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Register your interest</h1>
+    <span class="govuk-caption-l">Expression of interest</span>
+    <h1 class="govuk-heading-l" style="margin-bottom: 20px;">Register your interest</h1>
 
 <br>
 
