--- a/app/views/ftf/monitoring/v1-0/index.html
+++ b/app/views/ftf/monitoring/v1-0/index.html
@@ -137,7 +137,7 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Water Management Grant - Round 3<br>
+          <strong>Grant:</strong> Water Management Grant – Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
           <br>      
@@ -145,7 +145,7 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
                           
-              The deadline for your Year 1 report for the Water Management grant is <strong>30 March 2026</strong>.<br>
+              The deadline for your Year 1 report for the Water Management grant is <strong>28 February 2026</strong>.<br>
             </p>
 
 						
@@ -156,7 +156,7 @@
 
             <strong>What you need to do</strong><br><br>
 
-            You need to check what <a href="/_common/not-testing.html">evidence you need to submit</a>.<br><br>
+            <a href="/_common/not-testing.html">Check what evidence you need to submit</a>.<br><br>
 
             When you are ready, <a href="login">upload your Year 1 report.</a><br><br>
 
