--- a/app/views/ftf/monitoring/v1-0_y5/index.html
+++ b/app/views/ftf/monitoring/v1-0_y5/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Year 5 reporting due</title>
+  <title>Water Management Grant – Round 3 (Reference: WM-VMA-1234) - Year 5 reporting due</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -33,7 +33,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
 
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Due 30 March 2030: Water Management Year 5 report</span>
+<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Due 28 February 2030: Water Management Year 5 report</span>
 
   <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
     <tr>
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Due 30 March 2030: Water Management Year 5 report<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Due 28 February 2030: Water Management Year 5 report<br><br>
 
           <script>
             function navigateToPage() {
@@ -137,7 +137,7 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Water Management Grant - Round 3<br>
+          <strong>Grant:</strong> Water Management Grant – Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
           <br>      
@@ -145,7 +145,7 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
                           
-              The deadline for your Year 5 report for the Water Management grant is <strong>30 March 2030</strong>.<br>
+              The deadline for your Year 5 report for the Water Management grant is <strong>28 February 2030</strong>.<br>
             </p>
 
 						
@@ -156,7 +156,7 @@
 
             <strong>What you need to do</strong><br><br>
 
-            You need to check what <a href="/_common/not-testing.html">evidence you need to submit</a>.<br><br>
+            <a href="/_common/not-testing.html">Check what evidence you need to submit</a>.<br><br>
 
             When you are ready, <a href="login">upload your Year 5 report.</a><br><br>
 
