--- a/app/views/index.html
+++ b/app/views/index.html
@@ -85,11 +85,11 @@
     
             <p class="govuk-body">Monitoring:</p>
             <ul class="govuk-list govuk-list--bullet">
-              <li><a href="/ftf/activity-list/v3-0/index?status=07a&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=01" target="_blank">You can submit your year 1 reporting</a></li>
-              <li><a href="/ftf/activity-list/v3-0/index?status=07b&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=01" target="_blank">You can submit your year 2 reporting</a></li>
-              <li><a href="/ftf/activity-list/v3-0/index?status=07c&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=01" target="_blank">You can submit your year 3 reporting</a></li>
-              <li><a href="/ftf/activity-list/v3-0/index?status=07d&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=03&monitoring-04=01" target="_blank">You can submit your year 4 reporting</a></li>
-              <li><a href="/ftf/activity-list/v3-0/index?status=07e&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=03&monitoring-04=03&monitoring-05=01" target="_blank">You can submit your year 5 reporting</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=07a&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=02a" target="_blank">You can submit your year 1 reporting</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=07b&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=02a" target="_blank">You can submit your year 2 reporting</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=07c&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=02a" target="_blank">You can submit your year 3 reporting</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=07d&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=03&monitoring-04=02a" target="_blank">You can submit your year 4 reporting</a></li>
+              <li><a href="/ftf/activity-list/v3-0/index?status=07e&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=03&claim-03=03&monitoring-01=03&monitoring-02=03&monitoring-03=03&monitoring-04=03&monitoring-05=02a" target="_blank">You can submit your year 5 reporting</a></li>
             </ul>
           </div>
         </div>
