--- a/app/views/layouts/main-application-round-2.html
+++ b/app/views/layouts/main-application-round-2.html
@@ -8,8 +8,8 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 
 {% block header %}
 {{ govukHeader({
-  serviceName: "Apply for a farming grant",
-  serviceUrl: "/ftf/application/index"
+  serviceName: "Apply for a Water Management grant",
+  serviceUrl: "/ftf/activity-list/v3-0/index"
 }) }}
 {% endblock %}
 
