--- a/app/views/layouts/main-end-to-end.html
+++ b/app/views/layouts/main-end-to-end.html
@@ -8,7 +8,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
 
 {% block header %}
 {{ govukHeader({
-  serviceName: "Apply for a farming grant",
+  serviceName: "Apply for a Water Management grant",
   serviceUrl: "/ftf/index"
 }) }}
 {% endblock %}
