--- a/app/views/ftf/_includes/activity-list_task-section_apply.html
+++ b/app/views/ftf/_includes/activity-list_task-section_apply.html
@@ -28,7 +28,7 @@
     
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Check your business details</div>
+          <div>Check your details</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-3-status">
           Cannot start yet
@@ -76,7 +76,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <div>Check your business details</div>
+          <div>Check your details</div>
         </div>
         <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-3-status">
           Cannot start yet
@@ -123,7 +123,7 @@
 
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <div>Check your business details</div>
+        <div>Check your details</div>
       </div>
       <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-3-status">
         Cannot start yet
@@ -170,7 +170,7 @@
 
   <li class="govuk-task-list__item">
     <div class="govuk-task-list__name-and-hint">
-      <div>Check your business details</div>
+      <div>Check your details</div>
     </div>
     <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-3-status">
       Cannot start yet
@@ -215,7 +215,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="../../application/v3-0/check" aria-describedby="application-3-status">Check your business details</a>
+        <a class="govuk-link govuk-task-list__link" href="../../application/v3-0/check" aria-describedby="application-3-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="application-3-status">
         <strong class="govuk-tag govuk-tag--blue">
@@ -262,7 +262,7 @@
 
   <li class="govuk-task-list__item govuk-task-list__item--with-link">
     <div class="govuk-task-list__name-and-hint">
-      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-3-status">Check your business details</a>
+      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-3-status">Check your details</a>
     </div>
     <div class="govuk-task-list__status" id="application-3-status">
         Completed
@@ -309,7 +309,7 @@
 
   <li class="govuk-task-list__item">
     <div class="govuk-task-list__name-and-hint">
-      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-3-status">Check your business details</a>
+      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-3-status">Check your details</a>
     </div>
     <div class="govuk-task-list__status" id="application-3-status">
       Completed
@@ -354,7 +354,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-3-status">Check your business details</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-3-status">Check your details</a>
         </div>
         <div class="govuk-task-list__status" id="application-3-status">
           Completed
@@ -407,7 +407,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-3-status">Check your business details</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-3-status">Check your details</a>
         </div>
         <div class="govuk-task-list__status" id="application-3-status">
           Completed
