--- a/app/views/ftf/_includes/activity-list_task-section_eoi.html
+++ b/app/views/ftf/_includes/activity-list_task-section_eoi.html
@@ -16,7 +16,7 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="../../eoi/v2-0/p-details.html" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="../../eoi/v2-0/p-details.html" aria-describedby="expression-of-interest-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="expression-of-interest-2-status">
         <strong class="govuk-tag govuk-tag--blue">
@@ -50,7 +50,7 @@
   </li>
   <li class="govuk-task-list__item govuk-task-list__item--with-link">
     <div class="govuk-task-list__name-and-hint">
-      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
+      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your details</a>
     </div>
     <div class="govuk-task-list__status" id="expression-of-interest-2-status">
       <strong class="govuk-tag govuk-tag--light-blue">
@@ -84,7 +84,7 @@
 </li>
 <li class="govuk-task-list__item govuk-task-list__item--with-link">
   <div class="govuk-task-list__name-and-hint">
-    <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
+    <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your details</a>
   </div>
   <div class="govuk-task-list__status" id="expression-of-interest-2-status">
       Completed
@@ -118,7 +118,7 @@
       </li>
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your details</a>
         </div>
         <div class="govuk-task-list__status" id="expression-of-interest-2-status">
           Completed
@@ -150,7 +150,7 @@
       </li>
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your details</a>
         </div>
         <div class="govuk-task-list__status" id="expression-of-interest-2-status">
           Completed
@@ -190,7 +190,7 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your details</a>
       </div>
       <div class="govuk-task-list__status" id="expression-of-interest-2-status">
         Completed
