--- a/app/views/ftf/_includes/body-content_agreement-accepted-main-block.html
+++ b/app/views/ftf/_includes/body-content_agreement-accepted-main-block.html
@@ -5,25 +5,11 @@
 <ul class="govuk-list govuk-list--bullet">
   <li>supplier</li>
   <li>your business such as status or ownership</li>
-  <li>our grant-funded items such as ownership, usage or any deviation from your agreed project</li>
+  <li>your grant-funded items such as ownership, usage or any deviation from your agreed project</li>
   <li>project timescales such as claim submission or completion dates</li>
   <li>project outputs</li>
   <li>funding</li>
 </ul>
 
 <p class="govuk-body">Your agreement remains active for 5 years after your final claim is paid and there could be a site visit at any point during that time. If you make changes that have not been approved by us, we could end your agreement and reclaim any grant we have already paid.</p>
-</span>
-
-<span class="content-section">
-<h2 class="govuk-heading-m">Questions about your agreement</h2>
-<p class="govuk-body">If you have any questions about your agreement, call the RPA and follow the options for the Farming Transformation Fund scheme.</p>
-<p class="govuk-body"><strong>Telephone</strong><br>Telephone: 03000 200 301<br>Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-  <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
-  </p>      
-<p class="govuk-body"><strong>Email</strong><br><a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
-</span>
-
-<span class="content-section">
-<h2 class="govuk-heading-m">Withdrawing your agreement</h2>
-<p class="govuk-body">If you no longer want the grant funding, you can <a href="">withdraw your application</a> before you make a claim.</p>
 </span>
