--- a/app/views/ftf/_includes/body-content_annex-b-main-block.html
+++ b/app/views/ftf/_includes/body-content_annex-b-main-block.html
@@ -19,7 +19,7 @@
       <td class="govuk-table__cell govuk-table__cell--numeric">Year 1</td>
     </tr>
     <tr class="govuk-table__row">
-      <td scope="row" class="govuk-table__cell">Increase in reservoir storage capacity (m3)</td>
+      <td scope="row" class="govuk-table__cell">Increase in reservoir storage capacity (m<sup>3</sup>)</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">60,000</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">Year 1</td>
@@ -43,19 +43,19 @@
       <td class="govuk-table__cell govuk-table__cell--numeric">Year 1</td>
     </tr>
     <tr class="govuk-table__row">
-      <td scope="row" class="govuk-table__cell">Reduction in annual summer surface water abstraction licenced volume (m3)</td>
+      <td scope="row" class="govuk-table__cell">Reduction in annual summer surface water abstraction licenced volume (m<sup>3</sup>)</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
     </tr>
     <tr class="govuk-table__row">
-      <td scope="row" class="govuk-table__cell">Reduction in borehole abstraction volume (m3)</td>
+      <td scope="row" class="govuk-table__cell">Reduction in borehole abstraction volume (m<sup>3</sup>)</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
     </tr>
     <tr class="govuk-table__row">
-      <td scope="row" class="govuk-table__cell">Reduction in mains water use volume (m3)</td>
+      <td scope="row" class="govuk-table__cell">Reduction in mains water use volume (m<sup>3</sup>)</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
       <td class="govuk-table__cell govuk-table__cell--numeric">0</td>
       <td class="govuk-table__cell govuk-table__cell--numeric"></td>
@@ -68,7 +68,7 @@
     </tr>
   </tbody>
 </table>
-<p class="govuk-body-s">* New products and techniques as listed in the tables below</p>
+<p class="govuk-body-s">* New products and techniques as listed</p>
 </span>
 
 
@@ -77,7 +77,7 @@
   <h3 class="govuk-heading-m">New products (crops introduced)</h3>
   <ul class="govuk-list govuk-list--bullet">
     <li>Field-scale vegetables – Courgettes</li>
-    <li>Field-scale vegetables – Tenderstem Broccoli</li>
+    <li>Field-scale vegetables – Tenderstem broccoli</li>
   </ul>
 </span>
 
