--- a/app/views/ftf/application/v3-0/check.html
+++ b/app/views/ftf/application/v3-0/check.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-column-two-thirds">
 
 
-    <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
+    <span class="govuk-caption-xl">Apply</span>
 
 
     {% if (data['progress'] == "submitted") %}
