--- a/app/views/ftf/application/v3-0/email2.html
+++ b/app/views/ftf/application/v3-0/email2.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
+  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - 2 weeks left to submit your Water Management grant application</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -33,7 +33,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
 
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.</span>
+<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Water Management Grant - Round 3 (Reference: WM-VMA-1234) - 2 weeks left to submit your Water Management grant application.</span>
 
   <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
     <tr>
@@ -137,7 +137,7 @@
           
 
           <strong>Business name:</strong> Imaginary Farms Ltd<br>
-          <strong>Grant:</strong> Water Management Grant - Round 3<br>
+          <strong>Grant:</strong> Water Management Grant – Round 3<br>
           <strong>Project reference:</strong> WM-VMA-1234</p>
         
           <br>      
@@ -165,13 +165,22 @@
 
             <strong>What you need to do</strong><br><br>
 
-            <a href="/_common/not-testing.html">Download the Word application form and Excel appendix</a>
+            <a href="login2">Upload your application forms and evidence</a>.
+            <br><br>
+            You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.
+            <br><br>
+            You should also read <a href="/_common/not-testing.html">How to submit a Water Management grant full application</a>.
+            <br><br><br>
+
+            <!-- Old content - Removed as part of iteration #92
+              
+              <a href="/_common/not-testing.html">Download the Word application form and Excel appendix</a>
 
               <br><br>
 
             Before you fill in the full application, you need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.<br><br>
 
-            Evidence will include:<br><br>
+            Evidence could include:<br><br>
 
               <li>financial accounts</li>
               <li>linked businesses and their accounts</li>
@@ -189,7 +198,9 @@
 
               <br>
                                      
-              When you are ready to submit your application, <a href="login2">upload your application forms and evidence</a>.<br><br>
+              When you are ready to submit your application, <a href="login2">upload your application forms and evidence</a>.<br><br> -->
+
+
 
             <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of these forms.
 
