--- a/app/views/ftf/application/v3-0/financial/financialq.html
+++ b/app/views/ftf/application/v3-0/financial/financialq.html
@@ -25,7 +25,7 @@
   <div class="govuk-grid-column-two-thirds">
 
 
-    <span class="govuk-caption-xl">Financial accounts</span>
+    <span class="govuk-caption-xl">Apply</span>
 <br>   
 
 
