--- a/app/views/ftf/application/v3-0/upload.html
+++ b/app/views/ftf/application/v3-0/upload.html
@@ -27,7 +27,7 @@
 
     <div class="govuk-grid-column-two-thirds">
       
-      <span class="govuk-caption-xl">Apply for a Water Management Grant</span>
+      <span class="govuk-caption-xl">Apply</span>
       <h1 class="govuk-heading-xl">
         Upload application forms and evidence
       </h1>
