--- a/app/views/ftf/claim/v3-0/submit.html
+++ b/app/views/ftf/claim/v3-0/submit.html
@@ -24,18 +24,14 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
+    <span class="govuk-caption-xl">Submit first claim</span>
     <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Submit claim</h1>
-    <span class="govuk-body">Read and agree to submit your claim.</span>
-
-<br><br><br>
+    <p class="govuk-body-l">Read and agree to submit your claim.</p>
 
 
-    <h2 class="govuk-heading-m">Declaration</h2>
 
-    <h2 class="govuk-body">By submitting this claim form, you are signing up to the declaration and undertakings set out below.</h2>
 
-    <p class="govuk-body">I declare that:<br>
+    <p class="govuk-body">I confirm that:<br>
       <ul class="govuk-list govuk-list--bullet">
         <li>I have complied with and will continue to comply with my grant funding agreement.</li>
         <li>I have checked the information in this form is correct and I accept full responsibility for it.</li>
@@ -49,7 +45,7 @@
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
           <span class="govuk-warning-text__assistive"></span>
-          If you knowingly or recklessly make a false statement to obtain payments to yourself or others, you risk prosecution, termination of any resulting agreement, and recovery of any monies paid to you under the scheme. You may be excluded from this scheme and from other financial assistance under the Agriculture Act 2020 for up to two years.
+          Making false statements to receive payments can lead to prosecution, agreement termination and money recovery. You could be excluded from the Agriculture Act 2020 scheme and other financial aid for two years.
         </strong>
       </div>
 
