--- a/app/views/ftf/eoi/v2-0/b-details.html
+++ b/app/views/ftf/eoi/v2-0/b-details.html
@@ -30,7 +30,9 @@
     <div class="govuk-grid-row">
       
       <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-l">Business details</h2>
+
+        <span class="govuk-caption-l">Expression of interest</span>
+        <h1 class="govuk-heading-l">Business details</h1>
       <p class="govuk-body">Business details for Imaginary Farms Ltd</p>
       
 
