FTF E2E content iterations

--- a/app/views/ftf/claim/v3-0/upload1.html
+++ b/app/views/ftf/claim/v3-0/upload1.html
@@ -36,7 +36,7 @@
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive"></span>
-        Do not upload scanned copies or PDFs of the form.
+        Do not upload scanned copies or PDFs of the claim form.
       </strong>
     </div>
     <div class="govuk-form-group">
