--- a/app/views/ftf/application/v3-0/form/form3.html
+++ b/app/views/ftf/application/v3-0/form/form3.html
@@ -25,7 +25,7 @@
   <div class="govuk-grid-column-two-thirds">
 
 
-    <span class="govuk-caption-xl">Upload application forms</span>
+    <span class="govuk-caption-xl">Apply</span>
     <h1 class="govuk-heading-xl">Application form and appendix</h1>
     <h2 class="govuk-body" style="margin-top: -20px;">Upload the Word application form and Excel appendix.</h2>
 
