--- a/app/views/ftf/claim/v3-0/upload2.html
+++ b/app/views/ftf/claim/v3-0/upload2.html
@@ -25,7 +25,7 @@
   <div class="govuk-grid-column-two-thirds">
 
 
-    <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
+    <span class="govuk-caption-xl">Submit first claim</span>
     <h1 class="govuk-heading-xl">Upload claim form and evidence</h1>
 
     <h2 class="govuk-heading-l">1. Claim form</h2>
