FTF E2E upload task logic update

--- a/app/views/ftf/application/v3-0/financial/financial3a.html
+++ b/app/views/ftf/application/v3-0/financial/financial3a.html
@@ -113,7 +113,7 @@
 
 <!-- TEMP Link added for E2E testing -->
 
-<a href="../summary?progress=notsubmitted">
+<a href="../upload-completed?01=c&02=c&03=c&04=c&05=c&06=c&07=c&08=c&09=c&10=c">
   <button class="govuk-button">
     Continue
   </button>
